syntax = "proto3";

import "calc_info.proto";

option java_package = "ru.itmo.common.domain.message";

message FailedCalcInfoMessage {
  CalcInfoMessage calc_info = 1;
  uint32 fails_num = 2;
}